--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -39,6 +39,13 @@
                     <version>2.2.0</version>
                 </dependency>                
                 
+                <dependency>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                    <version>2.15.0</version> <!-- Replace with the latest version -->
+                </dependency>
+                                
+                
 	</dependencies>
 
 	<build>
