--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -27,9 +27,14 @@
                     <artifactId>spring-boot-starter-web</artifactId>
                 </dependency>
 
+		<dependency>
+                    <groupId>com.mysql</groupId>
+                    <artifactId>mysql-connector-j</artifactId>
+		</dependency>
+
                 <dependency>
-                   <groupId>org.springframework</groupId>
-                   <artifactId>spring-jdbc</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
                 </dependency>
 
 		<dependency>
