DB Batch insert working

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -5,6 +5,8 @@ spring:
     username: root
     password: Uqxomal1w
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      rewriteBatchedInserts: true    
 server:
   port : 8081
   
