--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,18 +1,18 @@
 # MySQL Database Configuration
 spring:
-  datasourcex:
+  datasource:
     url: jdbc:mysql://192.168.1.2:3306/kudori_local
     username: root
     password: Uqxomal1w
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       rewriteBatchedInserts: true   
-  datasource:
-    url: jdbc:postgresql://192.168.1.2:5432/public
+  datasource_:
+    url: jdbc:postgresql://192.168.1.2:5432/postgres
     username: postgres
     password: jaimeduque
     driver-class-name: org.postgresql.Driver      
-      
+ 
 server:
   port : 8081
   
